...
            contentTypeLabel = "Nom";
            break;
          case 'procedimiento':
            contentTypeLabel = "Procédure";
            break;
          case 'documentos_requeridos':
            contentTypeLabel = "Documents requis";
            break;
          default:
            contentTypeLabel = contentType;
        }

        return Padding(
...
